rework region headers; cli improvments